# spinot-python-backend

./: .env  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  serverless.yml  serverless_wsgi 3.py
.github/workflows/: cd.yaml
app/: config.py  dependencies.py  logger.py  main.py  supabase_client.py  utils.py
app/agents/: agent.py  indexing.py
app/apis/: ai_server.py
app/db/: agent_state.py  news.py  portfolio.py  report 2.py  report.py  source.py  tweet.py  tweets_users.py  twitter.py  user.py  user_oauth_info.py
app/onthefly/: actions.py  agent.py  agent_graph.py  agent_state.py  nodes.py
app/routers/: agent.py  ai.py  cron.py  process.py  report.py  source.py
app/s3/: __init__.py
app/service/: report_agent.py  twitter_batch_service.py
app/service/report_agent/: report_agent.py  utils.py
app/utils/: __init__.py  twitter.py
app/utils/asset_crawling/: cmc_fetching 2.py
app/utils/llm_apis/: openai_api.py
app/utils/rss_parser/: coindesk.py
app/utils/twitter_api/: authenticate.py  twitter_timeline.py
app/utils/twitter_oauth/: authenticate.py
scripts/: fetch_tickers.py
