[tool.poetry]
name = "spinot-python-backend"
version = "0.1.0"
description = ""
authors = ["Jinsuk Park <jinsuk@spinot.ai>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.7"
langgraph = "^0.2.44"
langchain-openai = "^0.2.5"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pydantic = "^2.9.2"
supabase = "^2.9.1"
dotenv-python = "^0.0.1"
mangum = "^0.19.0"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


